# argue-the-toss

./: .gitignore  CONVENTIONS.md  Cargo.toml  README.md  TROUBLESHOOTING.md  claude.md  document_index.md  documentation_index.md  map_test.rs  roadmap.md  test_personality  time_budget_plan.md
.claude/: settings.local.json
src/: game_loop_guard.rs  lib.rs  main.rs
src/ai/: action_generation.rs  actions.rs  considerations.rs  mod.rs  personality.rs  response_curves.rs
src/components/: action.rs  dead.rs  facing.rs  health.rs  last_seen.rs  mod.rs  muzzle_flash.rs  pathfinding.rs  player.rs  position.rs  soldier.rs  soldier_stats.rs  time_budget.rs  vision.rs  weapon.rs
src/config/: battlefield_config.rs  game_config.rs  mod.rs
src/game_logic/: battlefield.rs  combat.rs  line_of_sight.rs  mod.rs  objectives.rs  pathfinding.rs  shared_vision.rs  soldier_spawning.rs  terrain_generation.rs  terrain_properties.rs  turn_state.rs  vision_cone.rs
src/rendering/: mod.rs  viewport.rs  widgets.rs
src/simulation/: mod.rs
src/systems/: action_execution.rs  ai_action_planner.rs  mod.rs  muzzle_flash_cleanup.rs  objective_capture.rs  path_execution.rs  position_validation.rs  turn_manager.rs
src/ui/: app_state.rs  mod.rs
src/ui/menu/: main_menu.rs  menu_state.rs  mod.rs  new_game_config.rs  settings_menu.rs  widgets.rs
src/utils/: event_log.rs  input_mode.rs  mod.rs
tests/: movement_integration_test.rs
