[package]
name = "argue-the-toss"
version = "0.1.0"
edition = "2024"
authors = ["Argue the Toss Contributors"]
description = "A turn-based TUI roguelike inspired by Running with Rifles, focusing on individual soldier perspective in massive-scale WWI trench warfare"
license = "MIT OR Apache-2.0"

[dependencies]
# TUI Framework
ratatui = { version = "0.29.0", features = ["all-widgets", "serde"] }
crossterm = "0.28.1"

# Roguelike Utilities (Pathfinding, FOV)
bracket-lib = "0.8.7"
bracket-pathfinding = "0.8.7"

# Entity Component System
specs = { version = "0.20.0", features = ["serde", "shred-derive"] }
rand = "0.9.2"
